--- a/VinaShoeShop.csproj
+++ b/VinaShoeShop.csproj
@@ -155,53 +155,16 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\ApplicationDbcontext.cs" />
-    <Compile Include="Models\Chitietdonhang.cs">
-      <DependentUpon>QLdienthoai1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\C__MigrationHistory.cs">
-      <DependentUpon>QLdienthoai1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\Donhang.cs">
-      <DependentUpon>QLdienthoai1.tt</DependentUpon>
-    </Compile>
+    <Compile Include="Models\Chitietdonhang.cs" />
+    <Compile Include="Models\Donhang.cs" />
     <Compile Include="Models\GioHang.cs" />
     <Compile Include="Models\GuiMail.cs" />
-    <Compile Include="Models\Hangsanxuat.cs">
-      <DependentUpon>QLdienthoai1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\Kieudang.cs">
-      <DependentUpon>QLdienthoai1.tt</DependentUpon>
-    </Compile>
+    <Compile Include="Models\Hangsanxuat.cs" />
+    <Compile Include="Models\Kieudang.cs" />
     <Compile Include="Models\LoginModel.cs" />
-    <Compile Include="Models\Nguoidung.cs">
-      <DependentUpon>QLdienthoai1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\Phanquyen.cs">
-      <DependentUpon>QLdienthoai1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\QLdienthoai1.Context.cs" />
-    <Compile Include="Models\QLdienthoai1.Context1.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>QLdienthoai1.Context.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\QLdienthoai1.cs" />
-    <Compile Include="Models\QLdienthoai1.Designer.cs">
-      <DependentUpon>QLdienthoai1.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Models\QLdienthoai11.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>QLdienthoai1.tt</DependentUpon>
-    </Compile>
-    <Compile Include="Models\QLdienthoai11.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>QLdienthoai1.edmx</DependentUpon>
-    </Compile>
-    <Compile Include="Models\Sanpham.cs">
-      <DependentUpon>QLdienthoai1.tt</DependentUpon>
-    </Compile>
+    <Compile Include="Models\Nguoidung.cs" />
+    <Compile Include="Models\Phanquyen.cs" />
+    <Compile Include="Models\Sanpham.cs" />
     <Compile Include="Models\VnPayLibrary.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -364,16 +327,6 @@
     <Content Include="HinhanhSP\tin 6.png" />
     <Content Include="HinhanhSP\áo thun tay dài 2.jpg" />
     <Content Include="HinhanhSP\ảnh.gif" />
-    <Content Include="Models\QLdienthoai1.Context.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>QLdienthoai1.edmx</DependentUpon>
-      <LastGenOutput>QLdienthoai1.Context1.cs</LastGenOutput>
-    </Content>
-    <Content Include="Models\QLdienthoai1.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>QLdienthoai1.edmx</DependentUpon>
-      <LastGenOutput>QLdienthoai11.cs</LastGenOutput>
-    </Content>
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.esm.js" />
@@ -473,13 +426,6 @@
     <Content Include="Content\bootstrap-grid.rtl.css.map" />
     <Content Include="Content\bootstrap-grid.min.css.map" />
     <Content Include="Content\bootstrap-grid.css.map" />
-    <EntityDeploy Include="Models\QLdienthoai1.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>QLdienthoai11.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <Content Include="Models\QLdienthoai1.edmx.diagram">
-      <DependentUpon>QLdienthoai1.edmx</DependentUpon>
-    </Content>
     <None Include="packages.config" />
     <Content Include="Scripts\bootstrap.min.js.map" />
     <Content Include="Scripts\bootstrap.js.map" />
