Updating header and footer to make it looks better

--- a/Web.config
+++ b/Web.config
@@ -92,7 +92,9 @@
 		</system.codedom>
 		<connectionStrings>
 			<add name="DefaultConnection"
-				 connectionString="Server=LOTUS\LOTUS;Database=WebsiteGiay;Integrated Security=True;TrustServerCertificate=True;"
+				 connectionString="Server=WIN-B7KR3O0A1H0; //Nhớ đổi lại tên server
+				 Database=WebsiteGiay;Integrated Security=True;
+				 TrustServerCertificate=True;"
 				 providerName="System.Data.SqlClient" />
 		</connectionStrings>
 	</configuration>
