--- a/bin/TuongShoeShop.dll.config
+++ b/bin/TuongShoeShop.dll.config
@@ -19,9 +19,9 @@
 			<!--VNPAY SETTINGS-->
 			<add key="vnp_Url" value="https://sandbox.vnpayment.vn/paymentv2/vpcpay.html" />
 			<add key="vnp_Api" value="https://sandbox.vnpayment.vn/merchant_webapi/api/transaction" />
-			<add key="vnp_TmnCode" value="COZ2JCBE" />
+			<add key="vnp_TmnCode" value="ZKI3KWJ9" />
 			<!--mã code-->
-			<add key="vnp_HashSecret" value="GKLIP0TQ3BKKPDAPIHLP83FL3GRDSOT1" />
+			<add key="vnp_HashSecret" value="CBNCR0UMTDQNNZI0E5345BR26ZELG7OZ" />
 			<!--chuỗi bảo mật-->
 			<add key="vnp_Returnurl" value="https://localhost:44322//GioHang/VnpayReturn" />
 		</appSettings>
@@ -92,7 +92,7 @@
 		</system.codedom>
 		<connectionStrings>
 			<add name="DefaultConnection"
-				 connectionString="Server=LOTUS\LOTUS;Database=WebsiteGiay;Integrated Security=True;TrustServerCertificate=True;"
+				 connectionString="Server=WIN-B7KR3O0A1H0;Database=WebsiteGiay;Integrated Security=True;TrustServerCertificate=True;"
 				 providerName="System.Data.SqlClient" />
 		</connectionStrings>
 	</configuration>
