Making home page

--- a/VinaShoeShop.csproj
+++ b/VinaShoeShop.csproj
@@ -492,6 +492,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Admin\Models\" />
+    <Folder Include="Scripts\styles\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
