--- a/VinaShoeShop.csproj
+++ b/VinaShoeShop.csproj
@@ -211,6 +211,7 @@
     <Content Include="Areas\Assets\src\assets\demo\datatables-demo.js" />
     <Content Include="Areas\Assets\src\assets\img\error-404-monochrome.svg" />
     <Content Include="Areas\Assets\src\js\scripts.js" />
+    <Content Include="Banner\Salt.jpg" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
     <Content Include="Content\bootstrap-grid.rtl.css" />
