--- a/bin/TuongShoeShop.dll.config
+++ b/bin/TuongShoeShop.dll.config
@@ -92,7 +92,7 @@
 		</system.codedom>
 		<connectionStrings>
 			<add name="DefaultConnection"
-				 connectionString="Server=WIN-B7KR3O0A1H0; 
+				 connectionString="Server=LAPTOP-6712H2GD; 
 				 Database=WebsiteGiay;Integrated Security=True;
 				 TrustServerCertificate=True;"
 				 providerName="System.Data.SqlClient" />
