--- a/VinaShoeShop.csproj
+++ b/VinaShoeShop.csproj
@@ -174,6 +174,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include=".gitignore" />
     <Content Include="Areas\Assets\.gitignore" />
     <Content Include="Areas\Assets\dist\401.html" />
     <Content Include="Areas\Assets\dist\404.html" />
