Quick change banner

--- a/PXTShoeShop.csproj
+++ b/PXTShoeShop.csproj
@@ -212,10 +212,7 @@
     <Content Include="Areas\Assets\src\assets\demo\datatables-demo.js" />
     <Content Include="Areas\Assets\src\assets\img\error-404-monochrome.svg" />
     <Content Include="Areas\Assets\src\js\scripts.js" />
-    <Content Include="Banner\Salt3.jpg" />
-    <Content Include="Banner\Salt2.jpg" />
-    <Content Include="Banner\Salt1.jpg" />
-    <Content Include="Banner\Salt.jpg" />
+    <Content Include="Banner\ShoesBanner.jpg" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
     <Content Include="Content\bootstrap-grid.rtl.css" />
