--- a/packages.config
+++ b/packages.config
@@ -13,5 +13,6 @@
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
   <package id="PagedList" version="1.17.0.0" targetFramework="net48" />
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net48" />
+  <package id="PayPal" version="1.9.1" targetFramework="net48" />
   <package id="WebGrease" version="1.6.0" targetFramework="net48" />
 </packages>
