--- a/PXTShoeShop.csproj
+++ b/PXTShoeShop.csproj
@@ -69,6 +69,9 @@
     <Reference Include="PagedList.Mvc, Version=4.5.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
       <HintPath>packages\PagedList.Mvc.4.5.0.0\lib\net40\PagedList.Mvc.dll</HintPath>
     </Reference>
+    <Reference Include="PayPal, Version=1.9.1.0, Culture=neutral, PublicKeyToken=5b4afc1ccaef40fb, processorArchitecture=MSIL">
+      <HintPath>packages\PayPal.1.9.1\lib\net451\PayPal.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -163,6 +166,7 @@
     <Compile Include="Models\Kieudang.cs" />
     <Compile Include="Models\LoginModel.cs" />
     <Compile Include="Models\Nguoidung.cs" />
+    <Compile Include="Models\PaypalConfiguration.cs" />
     <Compile Include="Models\Phanquyen.cs" />
     <Compile Include="Models\Sanpham.cs" />
     <Compile Include="Models\VnPayLibrary.cs" />
