--- a/bin/TuongShoeShop.dll.config
+++ b/bin/TuongShoeShop.dll.config
@@ -1,11 +1,13 @@
-﻿	<!--
+﻿<?xml version="1.0" encoding="utf-8"?>	<!--
 	  For more information on how to configure your ASP.NET application, please visit
 	  https://go.microsoft.com/fwlink/?LinkId=301880
 	  -->
 	<configuration>
 		<configSections>
 			<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-			<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+      <section name="paypal" type="PayPal.SDKConfigHandler, PayPal" />
+
+      <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
 		</configSections>
 		<appSettings>
 			<add key="webpages:Version" value="3.0.0.0" />
@@ -33,7 +35,17 @@
 			<httpRuntime targetFramework="4.8" />
 		  </system.Web>
 	  -->
-		<system.web>
+    <!-- PayPal SDK settings -->
+    <paypal>
+      <settings>
+        <add name="mode" value="sandbox" />
+        <add name="connectionTimeout" value="360000" />
+        <add name="requestRetries" value="1" />
+        <add name="clientId" value="AUBRYmHUkfM5XdpMUlOkYHcJjwoxsgJJuew3trZDBF_hrxFe6YdnjASSBH3fC3PeqTv_u2lRJyDLiIj1" />
+        <add name="clientSecret" value="EF1sohjg4sbbnC7Z1-QB67Nao6brbr0NGnTPVo0mOUfnFbfHUkTKMTjO2Vb-znKopr2zEebqFn6DP8J1" />
+      </settings>
+    </paypal>
+    <system.web>
 			<compilation debug="true" targetFramework="4.8" />
 			<httpRuntime targetFramework="4.5.1" />
 		</system.web>
@@ -49,7 +61,7 @@
 				</dependentAssembly>
 				<dependentAssembly>
 					<assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" />
-					<bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
+					<bindingRedirect oldVersion="0.0.0.0-13.0.0.0" newVersion="13.0.0.0" />
 				</dependentAssembly>
 				<dependentAssembly>
 					<assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
@@ -65,11 +77,11 @@
 				</dependentAssembly>
 				<dependentAssembly>
 					<assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
-					<bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+					<bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
 				</dependentAssembly>
 				<dependentAssembly>
 					<assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-					<bindingRedirect oldVersion="1.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
+					<bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
 				</dependentAssembly>
 			</assemblyBinding>
 		</runtime>
@@ -91,10 +103,6 @@
 			</compilers>
 		</system.codedom>
 		<connectionStrings>
-			<add name="DefaultConnection"
-				 connectionString="Server=LAPTOP-6712H2GD; 
-				 Database=WebsiteGiay;Integrated Security=True;
-				 TrustServerCertificate=True;"
-				 providerName="System.Data.SqlClient" />
+			<add name="DefaultConnection" connectionString="Server=DESKTOP-ON1A8CG;       Database=WebsiteGiay;Integrated Security=True;      TrustServerCertificate=True;" providerName="System.Data.SqlClient" />
 		</connectionStrings>
 	</configuration>
