chat setup added

--- a/Web.config
+++ b/Web.config
@@ -1,5 +1,5 @@
-﻿<?xml version="1.0" encoding="utf-8"?>	<!--
-	  For more information on how to configure your ASP.NET application, please visit
+﻿<?xml version="1.0" encoding="utf-8"?>
+<!--
 	  https://go.microsoft.com/fwlink/?LinkId=301880
 	  -->
 	<configuration>
@@ -83,6 +83,10 @@
 					<assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
 					<bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
 				</dependentAssembly>
+				<dependentAssembly>
+					<assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+					<bindingRedirect oldVersion="0.0.0.0-4.2.2.0" newVersion="4.2.2.0" />
+				</dependentAssembly>
 			</assemblyBinding>
 		</runtime>
 		<entityFramework>
@@ -103,6 +107,6 @@
 			</compilers>
 		</system.codedom>
 		<connectionStrings>
-			<add name="DefaultConnection" connectionString="Server=WIN-B7KR3O0A1H0;       Database=WebsiteGiay;Integrated Security=True;      TrustServerCertificate=True;" providerName="System.Data.SqlClient" />
+			<add name="DefaultConnection" connectionString="Server=desktop-on1a8cg;       Database=WebsiteGiay;Integrated Security=True;      TrustServerCertificate=True;" providerName="System.Data.SqlClient" />
 		</connectionStrings>
 	</configuration>
