--- a/Web.config
+++ b/Web.config
@@ -107,6 +107,6 @@
 			</compilers>
 		</system.codedom>
 		<connectionStrings>
-			<add name="DefaultConnection" connectionString="Server=desktop-on1a8cg;       Database=WebsiteGiay;Integrated Security=True;      TrustServerCertificate=True;" providerName="System.Data.SqlClient" />
+			<add name="DefaultConnection" connectionString="Server=WIN-B7KR3O0A1H0;       Database=WebsiteGiay;Integrated Security=True;      TrustServerCertificate=True;" providerName="System.Data.SqlClient" />
 		</connectionStrings>
 	</configuration>
